<resources>
    <string name="app_name">ChatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- lOGIN STRING-->
    <string name="login">LOGIN</string>
    <string name="login_using_phoneNo">LOGIN USING PHONE NO</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_user_register_now">New User? Register Now</string>

    <!-- SIGNUP STRING-->
    <string name="signup">SignUp</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="instagram_icon">instagram icon</string>
    <string name="linkedin_icon">linkedin icon</string>
    <string name="twitter_icon">twiter icon</string>
    <string name="or">OR</string>


    <!-- NOTIFICATION STRING-->
    <string name="chanel_name">Massenger</string>
    <string name="channel_descripition">User Register Successfully</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>